--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,3 @@
-## MAC OS
-.DS_Store
-
-## TEXTMATE
-*.tmproj
-tmtags
-
-## EMACS
-*~
-\#*
-.\#*
-
-## VIM
-*.swp
-
-## PROJECT::GENERAL
-coverage
-rdoc
-pkg
-
-## PROJECT::SPECIFIC
-.document
-.yardoc
-doc
+pkg/*
+*.gem
+.bundle
